--- a/Dum01_weather/src/weather.html
+++ b/Dum01_weather/src/weather.html
@@ -1,14 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather App</title>
     <link rel="stylesheet" href="output.css">
+    <!-- npx tailwindcss -i ./src/input.css -o ./src/output.css --watch -->
+     
+    <!-- Font Awesome Icons -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
+    <!-- Heroicons for Tailwind (SVG) -->
+    <script src="https://unpkg.com/@heroicons/react@1.0.5/outline"></script>
+
+    <!-- Twemoji for Emojis -->
+    <script src="https://cdn.jsdelivr.net/npm/twemoji@13.1.0/twemoji.min.js"></script>
+
+    <!-- Google Material Icons -->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
 </head>
+
 <body>
-    <div class = "text-blue-600">
-        
-    </div>
+    <header>
+        <h1>
+            <img src="weather_logo.png" alt="Weather Logo">
+            <a href="#">Weather App <i class="fas fa-cloud-sun"></i></a>
+        </h1>
+        <nav>
+            <ul>
+                <li><a href="">Home</a></li>
+                <li><a href="">About</a></li>
+                <li><a href="">Contact</a></li>
+            </ul>
+
+            <ul>
+                <li><a href="">Login</a></li>
+                <li><a href="">Register</a></li>
+            </ul>
+        </nav>
+    </header>
+
+
+    <section>
+        <form action="">
+            <input type="text" name="city" id="city" placeholder="Enter city name">
+            <button type="submit">Search</button>
+        </form>
+    </section>
+
+
+    <main>
+
+    </main>
+
+    <footer>
+
+    </footer>
+    <script src="output.js"></script>
 </body>
+
 </html>
