--- a/Dum01_weather/src/weather.html
+++ b/Dum01_weather/src/weather.html
@@ -7,7 +7,7 @@
     <title>Weather App</title>
     <link rel="stylesheet" href="output.css">
     <!-- npx tailwindcss -i ./src/input.css -o ./src/output.css --watch -->
-     
+
     <!-- Font Awesome Icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
@@ -23,42 +23,81 @@
 </head>
 
 <body>
-    <header>
-        <h1>
-            <img src="weather_logo.png" alt="Weather Logo">
-            <a href="#">Weather App <i class="fas fa-cloud-sun"></i></a>
+    <header class="bg-blue-600 text-white p-6 shadow-lg">
+        <h1 class="flex flex-row items-center justify-center gap-4">
+            <img class="h-20" src="../assets/weather_logo.png" alt="Weather Logo">
+            <a class="text-4xl font-bold tracking-wide" href="#">Weather App</a>
         </h1>
-        <nav>
-            <ul>
-                <li><a href="">Home</a></li>
-                <li><a href="">About</a></li>
-                <li><a href="">Contact</a></li>
+
+        <nav class="mt-4 flex justify-between items-center">
+            <ul class="flex gap-6 text-lg">
+                <li><a class="hover:text-yellow-400 transition" href="#">Profile</a></li>
+                <li><a class="hover:text-yellow-400 transition" href="#">About</a></li>
+                <li><a class="hover:text-yellow-400 transition" href="#">Contact</a></li>
             </ul>
 
-            <ul>
-                <li><a href="">Login</a></li>
-                <li><a href="">Register</a></li>
+            <ul class="flex gap-6 text-lg">
+                <li><a class="hover:text-yellow-400 transition" href="#">Login</a></li>
+                <li><a class="hover:text-yellow-400 transition" href="#">Register</a></li>
             </ul>
         </nav>
     </header>
 
+    <main class="mx-6">
+        <!-- Search Section -->
+        <section class="bg-white p-10 rounded-lg shadow-lg mt-10 max-w-2xl mx-auto">
+            <form id="weather-form" class="flex items-center gap-4">
+                <input type="text" name="city" id="city" placeholder="Enter city name"
+                    class="w-full p-3 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500">
+                <button type="submit"
+                    class="px-6 py-3 bg-blue-600 text-white font-semibold rounded-lg hover:bg-blue-700 transition">
+                    Search
+                </button>
+            </form>
+        </section>
 
-    <section>
-        <form action="">
-            <input type="text" name="city" id="city" placeholder="Enter city name">
-            <button type="submit">Search</button>
-        </form>
-    </section>
+        <!-- Results Section -->
+        <section class="mt-10 max-w-4xl mx-auto p-8 bg-white rounded-lg shadow-lg">
+            <h2 class="text-3xl font-bold text-blue-600 mb-6 text-center">Weather Results</h2>
 
+            <div class="grid grid-cols-3 gap-8 text-gray-700">
+                <!-- Summary -->
+                <div class="flex items-center gap-4">
+                    <i id="weather-icon" class="fas text-6xl text-yellow-400"></i>
+                    <div>
+                        <h3 id="city-name" class="text-2xl font-bold"></h3>
+                        <p id="weather-description" class="text-lg"></p>
+                        <p id="temperature" class="text-lg"></p>
+                    </div>
+                </div>
 
-    <main>
+                <!-- Details -->
+                <div class="space-y-4">
+                    <p><strong>Coordinates:</strong> <span id="coordinates"></span></p>
+                    <p><strong>Sunrise:</strong> <span id="sunrise"></span></p>
+                    <p><strong>Sunset:</strong> <span id="sunset"></span></p>
+                    <p><strong>Sea Level Pressure:</strong> <span id="sea-level-pressure"></span></p>
+                    <p><strong>Ground Level Pressure:</strong> <span id="ground-level-pressure"></span></p>
+                </div>
+        
+                <div class="space-y-4">
+                    <p><strong>Humidity:</strong> <span id="humidity"></span></p>
+                    <p><strong>Wind Speed:</strong> <span id="wind-speed"></span></p>
+                    <p><strong>Wind Direction:</strong> <span id="wind-direction"></span></p>
+                    <p><strong>Wind Gust:</strong> <span id="wind-gust"></span></p>
+                    <p><strong>Visibility:</strong> <span id="visibility"></span></p>
+                    <p><strong>Cloudiness:</strong> <span id="cloudiness"></span></p>
+                </div>
+            </div>
+        </section>
 
     </main>
 
-    <footer>
-
+    <footer class="text-center p-6 bg-blue-600 text-white mt-10">
+        <p>Powered by Weather API <i class="material-icons">cloud</i></p>
     </footer>
-    <script src="output.js"></script>
+    <script type="module" src="weather.js"></script>
+
 </body>
 
 </html>
